--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/KhronosGroup/glTF-Sample-Models.git
 [submodule "assets/environments"]
 	path = assets/environments
-	url = git@github.com:ux3d/Sample-Environments.git
+	url = https://github.com/ux3d/Sample-Environments.git
